Add Dynamic API to Bean and JSON and Binder APIs.